--- a/IFC-JIRA-STANDARDS/manifest.json
+++ b/IFC-JIRA-STANDARDS/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "IFC JIRA Standards Comments Extension",
-	"version": "1.0",
+	"version": "1.0.1",
 	"description" : "Allow users to use templates to comment by keeping information in standards",
 	"icons": {
 		"128": "icon128.png",
@@ -20,8 +20,7 @@
 	"content_scripts": [
 		{
 			"matches": ["https://lab.accurate.com.br/request/browse/*"],
-			"js": ["content.js","jquery-3.2.1.min.js"],
-			"css": ["content.css"]
+			"js": ["content.js","jquery-3.2.1.min.js"]
 		}
 	],
 	"permissions" : [
